fix: overflow on active tab

--- a/apps/gauzy/src/app/pages/candidates/edit-candidate/edit-candidate-profile/edit-candidate-experience/edit-candidate-experience.component.scss
+++ b/apps/gauzy/src/app/pages/candidates/edit-candidate/edit-candidate-profile/edit-candidate-experience/edit-candidate-experience.component.scss
@@ -15,3 +15,7 @@
     }
   }
 }
+nb-tab.content-active {
+  max-height: calc(100vh - 30rem);
+  overflow-y: overlay;
+}
